<resources>
    <!--ESPANIOL-->
    <string name="app_name">FactApp-DSM</string>
    <string name="all">TODO</string>
    <string name="menu_close_session">Cerrar Sesión</string>
    <!--activity_sign_in-->
    <string name="welcome_sign_in">Bienvenido</string>
    <string name="title_sign_in">Ingresa tu usuario</string>
    <string name="email_sign_in">Correo</string>
    <string name="password_sign_in">Contraseña</string>
    <string name="accept_sign_in">INGRESAR</string>
    <string name="label_sign_in">¿No tienes cuenta todavía?</string>
    <string name="label_buttonSignUp_sign_in">REGISTRATE</string>
    <string name="button_google_sign_in">GOOGLE</string>
    <string name="button_facebook_sign_in">FACEBOOK</string>"
    <string name="msg_singin_enteremail">¡Ingrese el correo electrónico!</string>
    <string name="msg_singin_enterpassword">¡Ingrese una contraseña!</string>
    <string name="msg_singin_enterdatacorrectly">¡Ingrese datos válidos!</string>
    <string name="msg_singin_enteremail_valid">¡Ingrese un correo electronico válido!</string>
    <string name="msg_singin_enterpassword_valid">¡Ingrese una contraseña con mas de 6 caracteres!</string>
    <string name="msg_singin_commonerror">¡Algo salió mal, inténtelo de nuevo!</string>
    <string name="msg_singin_email_notexist">¡El correo seleccionado no existe!</string>
    <!--activity_sign_up-->
    <string name="welcome_sign_up">Únete a nuestra aplicación</string>
    <string name="title_sign_up">Registra tu usuario</string>
    <string name="name_sign_up">Nombre de Usuario</string>
    <string name="email_sign_up">Correo Eléctronico</string>
    <string name="password_sign_up">Contraseña</string>
    <string name="confirm_password_sign_up">Confirma tu contraseña…</string>
    <string name="accept_sign_up">REGISTRAR</string>
    <string name="label_sign_up">¿Ya posees una cuenta?</string>
    <string name="buttonLabel_signIn_sign_up">INICIA SESIÓN</string>
    <string name="msg_singup_enterusername">¡Ingrese el Nombre de Usuario!</string>
    <string name="msg_singup_enterpassword_again">¡Ingrese su contraseña nuevamente!</string>
    <string name="msg_singup_enterpassword_notmatch">¡Sus contraseñas no coinciden! :(</string>
    <!--activity-main-->
    <string name="label_main_title">FACT-APP</string>
    <string name="label_main_account_title">VALOR DE CUENTA DE REGISTROS</string>
    <string name="label_main_user_title">USUARIO: </string>
    <string name="label_main_email_title">CORREO: </string>
    <string name="label_main_mov_title">MOVIMIENTOS</string>
    <string name="label_main_transf_title">TRANSFERENCIAS</string>
    <string name="label_main_opc1">HISTORIAL DE\nMOVIMIENTOS</string>
    <string name="label_main_opc2">CLASIFICAR\nMOVIMIENTOS</string>
    <string name="label_main_opc3">ESTADISTICAS</string>
    <string name="label_main_opc4">AGREGAR\nFACTURAS</string>
    <string name="label_main_opc5">HACER UNA\nTRANSACCIÓN</string>
    <string name="label_main_opc6">PROVEEDORES</string>
    <string name="toast_main_userAdded">Usuario Agregado a la Base de Datos</string>
    <!--activity invoice-->
    <string name="label_whatdoyouneed">¿Que desea hacer?</string>
    <!--activtiy add invoice-->
    <string name="label_addinvoice_title">AGREGAR FACTURA</string>
    <string name="label_addinvoice_btnUploadImg">AGREGAR IMAGEN FACTURA</string>
    <string name="label_addinvoice_imgLink">Ingrese enlace de la imagen</string>
    <string name="label_addinvoice_numFact">Num. Factura</string>
    <string name="label_addinvoice_dateFact">Fecha Factura (DD/MM/AAAA)</string>
    <string name="label_addinvoice_typeFact">Tipo Factura</string>
    <string name="label_addinvoice_provFact">Proveedor</string>
    <string name="label_addinvoice_descripFact">Concepto de la Factura</string>
    <string name="label_addinvoice_valueFact">Monto</string>
    <string name="label_addinvoice_addFact">AGREGAR FACTURA</string>
    <string name="label_addinvoice_cancelFact">CANCELAR</string>
    <string name="spinner_hint_paymentPost">Seleccione el Tipo de Movimiento</string>
    <string name="spinner_addinvoice_payment">ABONO</string>
    <string name="spinner_addinvoice_post">CARGO</string>
    <string name="toast_addinvoice_uploadSuccess">¡Se guardo con éxito la factura!</string>
    <string name="toast_addinvoice_uploadFailed">¡Ocurrió un error guardando la factura!</string>
    <string name="toast_addinvoice_keyEmpty">La llave no existe</string>
    <string name="toast_addinvoice_updateSuccessful">¡Se actualizó el Registro con éxito!</string>
    <string name="toast_addinvoice_sessionClosed">Sesión Cerrada</string>
    <string name="toast_addinvoice_foto_upload">¡La imagen se subió correctamente!</string>
    <!--activity adapter-->
    <string name="label_adapter_fact_number">Número: </string>
    <string name="label_adapter_fact_type">Tipo: </string>
    <string name="label_adapter_fact_date">Fecha de Factura: </string>
    <string name="label_adapter_fact_client">Cliente: </string>
    <string name="label_adapter_fact_descrip">Descripción: </string>
    <string name="label_adapter_fact_total">Monto: </string>
    <!--activity search email-->
    <string name="label_searchEmail_title">Búsqueda por Correo</string>
    <string name="label_searchEmail_subtitle">Digite el corero eléctronico al que desea hacerle una transferencia</string>
    <string name="label_hint_searchEmail">Digite el correo que desea buscar</string>
    <string name="button_searchEmail">BUSCAR</string>
    <string name="button_searchEmail_cancel">CANCELAR</string>
    <string name="toast_searchEmail_emailempty">¡Digite un correo porfavor!</string>
    <string name="toast_searchEmail_emailnotvalid">¡Digite un correo válido!</string>
    <string name="toast_searchEmail_emailloggedin">No puedes hacerle una transferencia a la misma cuenta de correo con la que estas ingresado en la aplicación :(</string>
    <string name="toast_searchEmail_emailnotfound">El correo que busca no existe en la aplicación :(</string>
    <string name="toast_searchEmail_emailfound">¡Correo encontrado con éxito!</string>
    <!--activity trasnfer-->
    <string name="label_trasnfer_title">TRANSFERENCIA</string>
    <string name="label_transfer_card_title">Está a punto de hacerle una transferencia al siguiente usuario:</string>
    <string name="label_transfer_card_user">USUARIO: </string>
    <string name="label_transfer_button_uploadimage">AGREGAR IMAGEN TRANSACCIÓN</string>
    <string name="label_transfer_button_openimage">ABRIR IMAGEN TRANSACCIÓN</string>
    <string name="label_transfer_descrip">Descripción de la transferencia</string>
    <string name="label_transfer_addTransx">TRANSFERIR</string>
    <string name="tipo_transfer_value">TRANSFERENCIA</string>
    <string name="toast_addtransfer_uploadSuccess">¡La Transferencia fue hecha correctamente!</string>
    <string name="toast_addtransfer_uploadFailed">¡La Transferencia no fue hecha debido a un error!</string>
    <!--Validar Campos-->
    <string name="toast_numFact_empty">¡El "Número de Factura" esta vacío!</string>
    <string name="toast_dateFact_empty">¡La "Fecha de Factura" esta vacía!</string>
    <string name="toast_provider_empty">¡El "Proveedor de la Factura" esta vacío!</string>
    <string name="toast_description_empty">¡La "Descripción de la Factura" esta vacía!</string>
    <string name="toast_value_empty">¡El "Monto de la Factura" esta vacío!</string>
    <string name="toast_date_notvalid">¡Digite un formato de fecha válido!</string>
    <string name="toast_value_notvalid">¡Digite un monto con dos decimales!</string>
    <!--EXTRAS-->
    <string name="label_button1">Eliminar</string>
    <string name="label_button2">Cancelar</string>
    <string name="label_button3">Seleecionar</string>
    <string name="label_record_deleted">¡Registro Eliminado!</string>
    <string name="label_record_deleted_canel">¡Operación de borrado cancelada!</string>
    <!--activity adapter supplier-->
    <string name="label_adapter_supplier_tradename">Nombre comercial: </string>
    <string name="label_adapter_supplier_legalname">Nombre legal: </string>
    <string name="label_adapter_supplier_NRC">NRC: </string>
    <string name="label_adapter_supplier_NIT">NIT: </string>
    <string name="label_adapter_supplier_phone">Telefonos: </string>
    <string name="label_adapter_supplier_details">Otros detalles: </string>
    <!--activity add supplier-->
    <string name="label_addsupplier_title">AGREGAR PROVEEDOR</string>
    <string name="label_addsupplier_addSupp">AGREGAR PROVEEDOR</string>
    <string name="toast_addsupplier_uploadSuccess">¡Se guardo con éxito el proveedor!</string>
    <string name="toast_addsupplier_uploadFailed">¡Ocurrió un error guardando el proveedor!</string>
    <string name="toast_addsupplier_keyEmpty">La llave no existe</string>
    <string name="toast_addsupplier_updateSuccessful">¡Se actualizó el Registro con éxito!</string>
    <string name="toast_addsupplier_sessionClosed">Sesión Cerrada</string>
</resources>
