<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    android:orientation="vertical">

    <TextView
        android:id="@+id/lbAddSupplierTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:hapticFeedbackEnabled="false"
        android:text="@string/label_addsupplier_title"
        android:textColor="@color/colorDarkBlue"
        android:textSize="34sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTradename"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTradename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_adapter_supplier_tradename"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLegalName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLegalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_adapter_supplier_legalname"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNRC"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNRC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_adapter_supplier_NRC"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNIT"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNIT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_adapter_supplier_NIT"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_adapter_supplier_phone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtDetails"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_adapter_supplier_details"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/lytButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddFact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="guardar"
            android:text="@string/label_addsupplier_addSupp" />
    </LinearLayout>
</LinearLayout>