<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/label_addinvoice_addFact"
        android:textColor="@color/colorDarkBlue"
        android:textSize="34sp"
        android:textStyle="bold" />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_addinvoice_provFact"
        android:inputType="text" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnAddSupplier"
            android:layout_width="301dp"
            android:layout_height="43dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="guardar"
            android:text="Ver Proveedores" />
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btnSubirFoto"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/label_addinvoice_btnUploadImg"
        android:textColor="@color/white" />
</LinearLayout>




    <LinearLayout
        android:id="@+id/lytNumberDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:foregroundGravity="center"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/label_addinvoice_numFact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_addinvoice_numFact"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDateFact"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_addinvoice_dateFact"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTipFact1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTipFact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_addinvoice_typeFact"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtDescFact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConcepto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_addinvoice_descripFact"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtTotalFact"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:hint="@string/label_addinvoice_valueFact"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/rdgpPayPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="rdPay_click"
            android:text="@string/spinner_addinvoice_payment" />

        <RadioButton
            android:id="@+id/rdPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="rdPost_click"
            android:checked="true"
            android:text="@string/spinner_addinvoice_post" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/lytButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddFact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:onClick="guardar"
            android:text="@string/label_addinvoice_addFact" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="cancelar"
            android:text="@string/label_addinvoice_cancelFact" />
    </LinearLayout>

</LinearLayout>
