<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/img2"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <ProgressBar
        android:id="@+id/SignUpProgress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:theme="@style/Progressbar"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:layout_gravity="left"
            android:layout_marginStart="30dp"
            android:text="@string/welcome_sign_up"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
=======
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="32dp"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:layout_marginStart="30dp"/>
>>>>>>> fase_2

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="@string/title_sign_up"
=======
            android:text="@string/sign_up"
>>>>>>> fase_2
            android:textColor="@color/white"
            android:textSize="28dp"
            android:textStyle="italic"
            android:layout_gravity="left"
            android:layout_marginStart="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="60dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
<<<<<<< HEAD
                android:hint="@string/name_sign_up"
=======
                android:hint="Nombre"
>>>>>>> fase_2
                android:textColor="#404040"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="350dp"
            android:layout_height="60dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
<<<<<<< HEAD
                android:hint="@string/email_sign_up"
=======
                android:hint="Correo electronico:"
>>>>>>> fase_2
                android:layout_marginTop="10dp"
                android:textColor="#404040"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpPasswordLayout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
<<<<<<< HEAD
                android:hint="@string/password_sign_up"
=======
                android:hint="Contraseña:"
>>>>>>> fase_2
                android:layout_marginTop="10dp"
                android:textColor="#404040"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signUpCPasswordLayout"
            android:layout_width="350dp"
            android:layout_height="60dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signUpCPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
<<<<<<< HEAD
                android:hint="@string/confirm_password_sign_up"
=======
                android:hint="Confirmar contraseña"
>>>>>>> fase_2
                android:layout_marginTop="10dp"
                android:textColor="#404040"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/SignUpBtn"
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/celeste"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18sp"
<<<<<<< HEAD
            android:text="@string/accept_sign_up"
=======
            android:text="Sign Up"
>>>>>>> fase_2
            android:textAllCaps="false" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="@string/label_sign_up"
=======
            android:text="Ya tienes una cuenta?"
>>>>>>> fase_2
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="#404040"/>

        <TextView
            android:id="@+id/SignInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
<<<<<<< HEAD
            android:text="@string/buttonLabel_signIn_sing_up"
=======
            android:text="Sign In"
>>>>>>> fase_2
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="#2196F3"
            android:layout_marginStart="10dp"/>

    </LinearLayout>


</RelativeLayout>